refactor: Restaurant서베스에서 dto로 변환해주는 메서드를 from 을 사용하는 로직으로 변경